Le cambiamos el color y la alineacion

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>	
-	<h1>Este es mi blog en Internet</h1>
+	<h1>Este es mi nuevo y genial blog en Internet</h1>
 	<p>Y este es un parrafo muy basico</p>
 	<p>Y esta es otra linea del parrafo basico para guardar en la rama casimaster</p>
 
