--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-			Hyperblog
+			Superblog
                 <span id="tagline">Tu blog de cabecera</span>
 			
 		</div>
