--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Bienvenido a Hyperblog 2.0</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="css/estilo.css" />
     </head>
     <body>
